--- a/day11/my-app/package.json
+++ b/day11/my-app/package.json
@@ -7,10 +7,14 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.4.9",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-router": "^7.12.0",
+    "react-router-dom": "^7.12.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
